# html-directory-scrapers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: Sample_Output.csv
engines/html/: .env.example  README.md  checkpoint.py  config.py  config.yaml.example  controls.py  exporter.py  fetcher.py  parser.py  requirements.txt  scraper.py
engines/wordpress/: .env.example  README.md  checkpoint.py  config.py  config.yaml.example  controls.py  exporter.py  fetcher.py  parser.py  requirements.txt  scraper.py
tests/: conftest.py
tests/html/: conftest.py  test_html_engine.py
tests/wordpress/: conftest.py  test_wordpress_engine.py
